--- a/Web/README
+++ b/Web/README
@@ -1,8 +1,13 @@
 # Start service
-1. yarn install
-2. Run
-   1. yarn: ``` yarn start ```
-   2. Docker: ```docker run -d -p 8000:3000 --name badminton-court-frontend badminton-court-frontend:dev```
+## Run by yarn
+1. terminal: `yarn install`
+2. terminal: `yarn start`
+3. Open browser at domain ```localhost:8000```
+
+## Run by docker
+Path: `./badminton-court/Web`
+1. Build image: `docker build -t badminton-court-frontend:dev .`
+2. Run: `docker run -d --name badminton-court-frontend -p 8000:3000 badminton-court-frontend:dev`
 3. Open browser at domain ```localhost:8000```
 
 ## Note
